--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,14 +15,14 @@ Suggests: limma, edgeR, car, Rmixmod, ggplot2, gridExtra (>= 2.0.0),
         BiocStyle, pamr, sparsediscrim, PoiClaClu, curatedOvarianData,
         parathyroidSE, knitr, klaR, gtable, scales, e1071, rmarkdown, IRanges
 Description: The software formalises a framework for classification in R.
-             There are four stages. Data transformation, feature selection,
+             There are four stages. Data transformation, feature selection, classifier training,
              and prediction. The requirements of variable types and names are
              fixed, but specialised variables for functions can also be provided.
              The classification framework is wrapped in a driver loop, that
-             reproducibly does a couple of cross-validation schemes.
+             reproducibly carries out a number of cross-validation schemes.
              Functions for differential expression, differential variability,
              and differential distribution are included. Additional functions
-             may be developed by the user, if they have better performing methods.
+             may be developed by the user, by creating an interface to the framework.
 Collate: bartlettSelection.R classes.R utilities.R calcPerformance.R classifyInterface.R
          DMDselection.R edgeRselection.R errorMap.R fisherDiscriminant.R distribution.R
         getLocationsAndScales.R KolmogorovSmirnovSelection.R
