- fillLine in documentation corrected to lineColour. - x, row, and column elements of characteristicsList clarified. - alpha is now a parameter of performancePlot and selectionPlot. - Default colour scales of line and fill are no longer in reverse direction but in same direction. - Missing ggupset import statements in NAMESPACE file added.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -109,6 +109,8 @@ importFrom(S4Vectors,mcols)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(generics,train)
+importFrom(ggupset,axis_combmatrix)
+importFrom(ggupset,theme_combmatrix)
 importFrom(rlang,sym)
 importFrom(survival,Surv)
 importFrom(survival,concordance)
