Exported samplesSplits and splitsTestInfo functions for external use and changed their arguments to remove dependence on CrossValParams.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(bubblePlot,PrecisionPathways)
 S3method(flowchart,PrecisionPathways)
 S3method(predict,trainedByClassifyR)
+S3method(print,PrecisionPathways)
 S3method(strataPlot,PrecisionPathways)
 S3method(summary,PrecisionPathways)
 S3method(train,DataFrame)
@@ -47,7 +48,9 @@ export(runTest)
 export(runTests)
 export(sampleNames)
 export(samplesMetricMap)
+export(samplesSplits)
 export(selectionPlot)
+export(splitsTestInfo)
 export(totalPredictions)
 export(tunedParameters)
 exportClasses(ClassifyResult)
@@ -102,7 +105,6 @@ import(ggpubr)
 import(grid)
 import(methods)
 import(reshape2)
-import(utils)
 importFrom(S4Vectors,as.data.frame)
 importFrom(S4Vectors,do.call)
 importFrom(S4Vectors,mcols)
