Fixes for multi-view mode with parameter tuning.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,7 +50,9 @@ export(runTest)
 export(runTests)
 export(sampleNames)
 export(samplesMetricMap)
+export(samplesSplits)
 export(selectionPlot)
+export(splitsTestInfo)
 export(strataPlot)
 export(totalPredictions)
 export(tunedParameters)
@@ -106,7 +108,6 @@ import(ggpubr)
 import(grid)
 import(methods)
 import(reshape2)
-import(utils)
 importFrom(S4Vectors,as.data.frame)
 importFrom(S4Vectors,do.call)
 importFrom(S4Vectors,mcols)
