- Features used can be extracted from penalised Cox model. - Final model can be used with predict function. - prepareData can filter correlated features. - easyHard helps to associate variables with per-sample prediction accuracy.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(crissCrossPlot)
 export(crissCrossValidate)
 export(crossValidate)
 export(distribution)
+export(easyHard)
 export(edgesToHubNetworks)
 export(featureSetSummary)
 export(finalModel)
@@ -80,6 +81,7 @@ exportMethods(calcExternalPerformance)
 exportMethods(chosenFeatureNames)
 exportMethods(crossValidate)
 exportMethods(distribution)
+exportMethods(easyHard)
 exportMethods(featureSetSummary)
 exportMethods(finalModel)
 exportMethods(interactorDifferences)
@@ -111,6 +113,8 @@ import(reshape2)
 importFrom(S4Vectors,as.data.frame)
 importFrom(S4Vectors,do.call)
 importFrom(S4Vectors,mcols)
+importFrom(broom,tidy)
+importFrom(dcanr,cor.pairs)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(generics,train)
